# poc-trial-solution

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-version.yml
src/account/: datasets.py  main.py
src/account/common/: api.py  base.py  write_excel.py
src/account/config/: dataset_lbl.json  dues_template.xlsx  flat_name_mappings.json  general_payments_debit.json  qry_dues.graphql  var_dues.json  vendor_debit.json
src/account/service/: base_svc.py  creditor.py  debitor.py  ner_predict.py
src/account/utils/: app_logger.py  constants.py  utils.py
src/account/writer/: base_writer.py  write_excel.py  write_pdf.py
src/ai/homl/: 02_end_to_end_machine_learning_project.ipynb
src/ai/models/: llm.ipynb
src/ai/ner/: command.sh  config.cfg  corona2.json  custom_ner.ipynb  (+4 more)
src/ajira/: net_main.py  network.py  node.py
src/arrays/: array_hourglass.py  array_manipulation.py  dynamic_array.py  greater_odd_array.py  kth_element_large_small.py  largest_rectangle.py  left_rotation.py  max_hamming_dist.py  multiple_rotations.py  nearest_block.py  reverse_array.py  shift_zeros.py  sorted_array.py  sparse_arrays.py  two_sums.py
src/docx/: comparison-with-track-changes.docx  doc-new.docx  doc-old.docx  docx_compare.py
src/dspy_ex/: common_nlp_lm_tasks.py  dspy_utils.py
src/linked_list/: cycle_detection.py  delete_node.py  linked_list.py  merge_point.py
src/pdf/: annotate_pdf.py  borb.ipynb  borb.py
src/series/: fibonacci.py  staircase.py
src/trees/: swap_node.py  test_twitter.py  tw_home_timeline.py  universal_tree.py
(+2 files in other folders)
