[tool.poetry]
name = "poc-trial-solution"
version = "0.1.2"
description = "POC Trials projects for problems and self learning."
license = "MIT"
authors = ["AbijeethDarwin <code@example.com>"]
maintainers = ["AbijeethDarwin <code@example.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "poc-trial-solution" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^3.2 || ^4.0 || ^5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
pre-commit = "^4.1.0"
ruff = "^0.9.3"

[tool.poetry.group.test.dependencies]
coverage = "^7.6.10"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
tox = "^4.24.1"

[tool.poetry.extras]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
